# genai-examples

./: .gitignore  CHANGELOG.md  Jenkinsfile  LICENSE.txt  README.md  release-modules
basic-actor-chain-example/: README.md  pyproject.toml
basic-actor-chain-example/basic_actor_chain_example/: chain.py  main.py
basic-actor-chain-example/basic_actor_chain_example/actors/: basic_actor.py
basic-actor-chain-example/tests/integration/basic_actor_chain/: test_chain.py
basic-actor-chain-example/tests/unit/basic_actor_chain/: test_chain.py
example-chain-basic-actor/: README.adoc  README.md  pyproject.toml
example-chain-basic-actor/basic_actor_chain/: chain.py  main.py
example-chain-basic-actor/basic_actor_chain/actors/: basic_actor.py
example-chain-basic-actor/basic_actor_chain/constants/: constants.py
example-chain-basic-actor/tests/unit/basic_actor_chain/: test_chain.py
example-chain-chat-memory/: README.md  pyproject.toml
example-chain-chat-memory/chat_memory_chain/: chain.py  main.py
example-chain-chat-memory/chat_memory_chain/constants/: constants.py
example-chain-chat-memory/memory_chain/: chain.py  main.py
example-chain-chat-memory/tests/unit/chat_memory_chain/: test_chain.py
example-chain-chat-memory/tests/unit/memory_chain/: test_chain.py
example-chain-opensearch/: README.md  pyproject.toml
example-chain-opensearch/opensearch_chain/: chain.py  main.py
example-chain-opensearch/opensearch_chain/constants/: constants.py
example-chain-opensearch/opensearch_chain/services/: opensearch_service.py
example-chain-opensearch/tests/unit/opensearch_chain/: test_chain.py
example-chain-virtualizer/: README.md  pyproject.toml
example-chain-virtualizer/tests/unit/virtualizer_chain/: test_chain.py
example-chain-virtualizer/virtualizer_chain/: chain.py  main.py
genai-chain-docs/: README.md  pyproject.toml
genai-chain-examples/: README.md  docker-compose.yml  pyproject.toml
genai-chain-examples/genai_chain_auth/: README.md
genai-chain-examples/genai_chain_echo/: README.md
genai-chain-examples/genai_chain_gateway/: README.md
genai-chain-examples/genai_chain_joke/: README.md
genai-chain-examples/genai_chain_memory/: README.md
genai-chain-examples/genai_chain_metrics/: README.md
genai-chain-examples/scripts/: create_openai_endpoints.py
genai-chain-examples/tests/unit/chain_gateway/: test_chain.py
memory-chain-example/: README.md
memory-chain-example/memory_chain_example/: main.py
opensearch-chain-example/: README.md  pyproject.toml
opensearch-chain-example/opensearch_chain_example/: chain.py  main.py
opensearch-chain-example/opensearch_chain_example/constants/: constants.py
opensearch-chain-example/opensearch_chain_example/services/: opensearch_service.py
opensearch-chain-example/tests/unit/opensearch_chain_example/: test_chain.py
scripts/: create_env_file.py
virtualizer-chain-example/: README.md  pyproject.toml
virtualizer-chain-example/virtualizer_chain_example/: chain.py  main.py
virtualizer-chain-example/virtualizer_chain_example/tests/unit/: test_chain.py
