[tool.poetry]
name = "basic-actor-chain"
version = "0.7.0a0"
description = "A simple chain to show how to define and use an actor in a chain"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
genai-core = "0.6.1"
# already included in genai-core but we set a fixed version
langchain = "0.3.27"
langchain-community = "0.3.31"
langchain-openai = "0.3.35"
langchain-aws = "0.2.35"
langgraph = "0.4.10"
langsmith = "0.4.33"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-asyncio = "1.2.0"
pytest-mock = "3.15.1"
pytest-cov = "7.0.0"
pylint = "3.3.9"
pylintfileheader = "1.0.0"
black = "25.11.0"
isort = "6.1.0"
mypy = "1.18.2"

[tool.poetry.scripts]
build-fat-package = 'genai_core.builder.builder:main'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = ["manual: to mark tests as manual"]
addopts = "-m 'not manual'"

[[tool.poetry.source]]
name = "stratio-releases"
# Here you should replace the existing Url, with the genai-api-development-proxy url.
# See also example-chain-basic-actor/README.md
#url = "https://genai-developer-proxy-loadbalancer.s000001-genai.k8s.fifteen.labs.stratio.com:8080/service/genai-api/v1/pypi/simple/"
url = "http://qa.int.stratio.com/repository/python-releases/simple/"
priority = "supplemental"

[tool.coverage.run]
omit = [
    "tests/*",
    "scripts/*",
]

[tool.pylint.main]
py-version = "3.11"
ignore-patterns = ["^\\.#"]
ignore-paths = [
    "^tests$",
    "^tests/.*$",
    "^scripts/.*$",
]
load-plugins = ["pylintfileheader"]
file-header = "[\\S\\n\\t\\v ]+© 2025 Stratio Big Data Inc."
file-header-ignore-empty-files = true

[tool.pylint.basic]
no-docstring-rgx = "^_"

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "use-symbolic-message-instead",
    "too-few-public-methods"
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.variables]
ignored-argument-names = "_.*|^ignored_|^unused_"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
